# FAST_API_PROJECT

./: .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: main.yml  on-release-main.yml
docs/: index.md  modules.md
fast_api/src/: hello.py
tests/: test_foo.py
